# rust-learning-journey

./: README.md
notes/: 001-我要不要从《The Rust Programming Language》开始学Rust.md  002-刚开始用Rust时我为什么觉得模块系统特别乱.md  003-作为独立开发者我应该怎么创造一个系统？.md
projects/rust-cli-playground/: Cargo.toml  README.md
projects/rust-cli-playground/src/: cli.rs  lib.rs  main.rs
